horizontal scroll fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ body {
 }
 
 body {
-  margin: 0;
+
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background: #f8f8f8;
 }
@@ -22,7 +22,8 @@ body {
 // ----navbar
 .navbar {
   // border-top: 3px solid $color-orange; 
-  padding: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 
@@ -125,15 +126,7 @@ body {
   max-height: 500px !important;
 }
 
-html,
-body {
-  height: 100%;
-}
 
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
 
 .mat-dialog-container {
   background-color: #3f729b;
